test/Fail/Safe-flag-only-scope-checking-2.agda
useful-lemma : ∀ {a} {A : Set a} → A
useful-lemma = useful-lemma
